--- a/yoyodyne/DIR/report/cumulatelocalprogresses.jrxml
+++ b/yoyodyne/DIR/report/cumulatelocalprogresses.jrxml
@@ -39,6 +39,9 @@
 	<field name="PERIOD_DURATION" class="java.lang.String">
 		<fieldDescription><![CDATA[periodduration]]></fieldDescription>
 	</field>
+	<field name="NODE_HIERARCHY" class="java.lang.String">
+		<fieldDescription><![CDATA[hierarchy]]></fieldDescription>
+	</field>
 		<group  name="PERIOD" isStartNewColumn="false" isStartNewPage="false" isResetPageNumber="false" isReprintHeaderOnEachPage="true" minHeightToStartNewPage="0" >
 			<groupExpression><![CDATA[$F{PERIOD_NAME}]]></groupExpression>
 			<groupHeader>
@@ -284,14 +287,14 @@
 			</band>
 		</columnHeader>
 		<detail>
-			<band height="56"  isSplitAllowed="true" >
+			<band height="73"  isSplitAllowed="true" >
 				<rectangle radius="0" >
 					<reportElement
 						mode="Opaque"
 						x="72"
 						y="3"
 						width="460"
-						height="20"
+						height="34"
 						forecolor="#000000"
 						backcolor="#E5E5FB"
 						key="rectangle-4"
@@ -307,7 +310,7 @@
 					<reportElement
 						mode="Opaque"
 						x="103"
-						y="26"
+						y="42"
 						width="430"
 						height="26"
 						forecolor="#000000"
@@ -379,6 +382,26 @@
 						<font fontName="Arial" pdfFontName="Helvetica" size="8" isBold="false" isItalic="false" isUnderline="false" isPdfEmbedded ="false" pdfEncoding ="Cp1252" isStrikeThrough="false" />
 					</textElement>
 				<textFieldExpression   class="java.lang.String"><![CDATA[$F{DURATION}]]></textFieldExpression>
+				</textField>
+				<textField isStretchWithOverflow="true" pattern="" isBlankWhenNull="true" evaluationTime="Now" hyperlinkType="None" >					<reportElement
+						mode="Transparent"
+						x="77"
+						y="20"
+						width="320"
+						height="14"
+						forecolor="#000000"
+						backcolor="#FFFFFF"
+						key="textField-19"
+						stretchType="NoStretch"
+						positionType="FixRelativeToTop"
+						isPrintRepeatedValues="true"
+						isRemoveLineWhenBlank="false"
+						isPrintInFirstWholeBand="false"
+						isPrintWhenDetailOverflows="false"/>
+					<textElement textAlignment="Left" verticalAlignment="Middle" rotation="None" lineSpacing="Single">
+						<font fontName="Arial" pdfFontName="Helvetica" size="7" isBold="false" isItalic="true" isUnderline="false" isPdfEmbedded ="false" pdfEncoding ="Cp1252" isStrikeThrough="false" />
+					</textElement>
+				<textFieldExpression   class="java.lang.String"><![CDATA[$F{NODE_HIERARCHY}]]></textFieldExpression>
 				</textField>
 			</band>
 		</detail>
