--- a/swdev/resourcebundleeditor/src/java/com/davidecavestro/rbe/gui/AddEntryDialog.form
+++ b/swdev/resourcebundleeditor/src/java/com/davidecavestro/rbe/gui/AddEntryDialog.form
@@ -72,6 +72,9 @@
       </Constraints>
     </Component>
     <Component class="javax.swing.JTextField" name="keyField">
+      <Properties>
+        <Property name="focusCycleRoot" type="boolean" value="true"/>
+      </Properties>
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="keyFieldActionPerformed"/>
         <EventHandler event="keyTyped" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="keyFieldKeyTyped"/>
