--- a/swdev/resourcebundleeditor/src/java/com/davidecavestro/rbe/gui/MainWindow.form
+++ b/swdev/resourcebundleeditor/src/java/com/davidecavestro/rbe/gui/MainWindow.form
@@ -602,7 +602,10 @@
                   <Dimension value="null"/>
                 </Property>
                 <Property name="minimumSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
-                  <Dimension value="[60, 50]"/>
+                  <Dimension value="null"/>
+                </Property>
+                <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
+                  <Dimension value="null"/>
                 </Property>
               </Properties>
               <Constraints>
@@ -618,13 +621,19 @@
                     <Property name="cellRenderer" type="javax.swing.tree.TreeCellRenderer" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
                       <Connection code="&#x9;new DefaultTreeCellRenderer () {&#xa;&#x9;   public Component getTreeCellRendererComponent(JTree tree, Object value,&#xa;&#x9;&#x9;  boolean sel,&#xa;&#x9;&#x9;  boolean expanded,&#xa;&#x9;&#x9;  boolean leaf, int row,&#xa;&#x9;&#x9;  boolean hasFocus) {&#xa;&#x9;&#x9;&#x9;final JLabel label = (JLabel)super.getTreeCellRendererComponent (tree, value, sel, expanded, leaf, row, hasFocus);&#xa;&#x9;&#x9;&#x9;if (value == LocalizationProperties.DEFAULT) {&#xa;&#x9;&#x9;&#x9;&#x9;label.setText (&quot;Default&quot;);&#xa;&#x9;&#x9;&#x9;}&#xa;&#x9;&#x9;&#x9;return label;&#xa;&#x9;&#x9;}&#xa;&#x9;}&#xa;" type="code"/>
                     </Property>
+                    <Property name="maximumSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
+                      <Dimension value="null"/>
+                    </Property>
                     <Property name="minimumSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
-                      <Dimension value="[50, 50]"/>
+                      <Dimension value="null"/>
                     </Property>
                     <Property name="model" type="javax.swing.tree.TreeModel" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
                       <Connection code="new LocalizationTreeModel (this._wm.getApplicationContext ().getModel ())" type="code"/>
                     </Property>
                     <Property name="name" type="java.lang.String" value="bundleTree"/>
+                    <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
+                      <Dimension value="[150, 150]"/>
+                    </Property>
                   </Properties>
                   <Events>
                     <EventHandler event="mousePressed" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="bundleTreeMousePressed"/>
