--- a/swdev/resourcebundleeditor/src/java/com/davidecavestro/rbe/gui/Splash.form
+++ b/swdev/resourcebundleeditor/src/java/com/davidecavestro/rbe/gui/Splash.form
@@ -45,6 +45,9 @@
           <Properties>
             <Property name="value" type="int" value="99"/>
             <Property name="indeterminate" type="boolean" value="true"/>
+            <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
+              <Dimension value="[148, 8]"/>
+            </Property>
           </Properties>
           <Constraints>
             <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignBorderLayout" value="org.netbeans.modules.form.compat2.layouts.DesignBorderLayout$BorderConstraintsDescription">
